# Svampjakt-2

./: .gitignore  CMakeLists.txt
cmake-debug-ios/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  cmake_install.cmake
cmake-debug-ios/CMakeScripts/: ReRunCMake.make
cmake-debug-ios/Debug-iphoneos/Svampjakt2.app/: Info.plist  embedded.mobileprovision  game_manager.lua  level1.lua  level_manager.lua  main.lua  mushroom_inspector.lua  mushroom_spawner.lua  startscreen.lua
cmake-debug-ios/Debug-iphoneos/Svampjakt2.app.dSYM/Contents/: Info.plist
cmake-debug-ios/Debug-iphoneos/Svampjakt2.app/_CodeSignature/: CodeResources
cmake-debug-ios/Debug-iphoneos/Svampjakt2.app/scripts/: main.lua
cmake-debug-ios/Debug-iphoneos/Svampjakt2.app/scripts/game/: game_manager.lua
cmake-debug-ios/Debug-iphoneos/Svampjakt2.app/scripts/mushrooms/: mushroom_inspector.lua  mushroom_spawner.lua
cmake-debug-ios/Debug-iphoneos/Svampjakt2.app/scripts/systems/: fireflies.lua
cmake-debug-ios/Debug-iphoneos/Svampjakt2.app/scripts/text/: lato_big.lua
cmake-debug-ios/Debug-iphoneos/Svampjakt2.app/scripts/ui/: points.lua  startscreen.lua
cmake-debug-ios/Debug-iphoneos/Svampjakt2.swiftmodule/: arm64-apple-ios.swiftdoc  arm64-apple-ios.swiftmodule
cmake-debug-ios/Debug-iphoneos/Svampjakt2.swiftmodule/Project/: arm64-apple-ios.swiftsourceinfo
cmake-debug-ios/Debug-iphonesimulator/Svampjakt2.app/: Info.plist  Svampjakt2  __preview.dylib  fireflies.lua  font.lua  game_manager.lua  level1.lua  mushroom.lua  mushroom_inspector.lua  mushroom_spawner.lua  points.lua  startscreen.lua  static_frag.spv  static_vert.spv
cmake-debug-ios/Debug-iphonesimulator/Svampjakt2.app.dSYM/Contents/: Info.plist
cmake-debug-ios/Debug-iphonesimulator/Svampjakt2.app.dSYM/Contents/Resources/DWARF/: Svampjakt2
cmake-debug-ios/Debug-iphonesimulator/Svampjakt2.app.dSYM/Contents/Resources/Relocations/aarch64/: Svampjakt2.yml
cmake-debug-ios/Debug-iphonesimulator/Svampjakt2.swiftmodule/: arm64-apple-ios-simulator.swiftdoc  arm64-apple-ios-simulator.swiftmodule
cmake-debug-ios/Debug-iphonesimulator/Svampjakt2.swiftmodule/Project/: arm64-apple-ios-simulator.swiftsourceinfo
cmake-debug-ios/Entropy/: cmake_install.cmake
cmake-debug-ios/Entropy/CMakeScripts/: ReRunCMake.make
cmake-debug-ios/Entropy/Entropy.xcodeproj/: project.pbxproj
cmake-debug-ios/Entropy/Entropy.xcodeproj/xcshareddata/xcschemes/: ALL_BUILD.xcscheme  Bullet3Common.xcscheme  BulletCollision.xcscheme  BulletDynamics.xcscheme  BulletInverseDynamics.xcscheme  BulletSoftBody.xcscheme  Entropy.xcscheme  LinearMath.xcscheme  ZERO_CHECK.xcscheme  box2d.xcscheme  flecs_static.xcscheme  freetype.xcscheme  glm.xcscheme  install.xcscheme  lua.xcscheme  package.xcscheme  spdlog.xcscheme  tinygltf.xcscheme  tinyobjloader.xcscheme  uninstall.xcscheme
cmake-debug-ios/Svampjakt2.xcodeproj/: project.pbxproj
cmake-debug-ios/Svampjakt2.xcodeproj/project.xcworkspace/xcuserdata/joakimwennergren.xcuserdatad/: UserInterfaceState.xcuserstate
cmake-debug-ios/Svampjakt2.xcodeproj/xcshareddata/xcschemes/: ALL_BUILD.xcscheme  Bullet3Common.xcscheme  BulletCollision.xcscheme  BulletDynamics.xcscheme  BulletInverseDynamics.xcscheme  BulletSoftBody.xcscheme  Entropy.xcscheme  LinearMath.xcscheme  Svampjakt2.xcscheme  ZERO_CHECK.xcscheme  box2d.xcscheme  flecs_static.xcscheme  freetype.xcscheme  glm.xcscheme  install.xcscheme  lua.xcscheme  package.xcscheme  spdlog.xcscheme  tinygltf.xcscheme  tinyobjloader.xcscheme  uninstall.xcscheme
cmake-debug-ios/Svampjakt2.xcodeproj/xcuserdata/joakimwennergren.xcuserdatad/xcschemes/: xcschememanagement.plist
iOS/: UI.swift
scripts/: main.lua
scripts/camera/: camera_controller.lua
scripts/clouds/: cloudsystem.lua
scripts/globals/: globals.lua
scripts/levels/: level1.lua
scripts/mushrooms/: mushroom.lua  mushroom_inspector.lua
scripts/player/: player.lua
src/: main.cpp
